--- a/MemeRoulette/MemeRoulette.Web/Views/Shared/_SPA.cshtml
+++ b/MemeRoulette/MemeRoulette.Web/Views/Shared/_SPA.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,9 +12,9 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
+    
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -41,5 +47,10 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     
+    <script src="~/Scripts/knockout-3.4.0.js"></script>
+    <script src="~/scripts/jquery.signalR-2.2.0.min.js"></script>
+    <script src="~/signalr/hubs"></script>    
+    <script src="~/scripts/MyLibs/App.js"></script>
+
 </body>
 </html>
